--- a/Zhihugit/app/src/main/res/values/colors.xml
+++ b/Zhihugit/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0077D9</color>
+    <color name="colorPrimaryDark">#006CC5</color>
+    <color name="colorAccent">#80BBEC</color>
+    <color name="white">#fff</color>
 </resources>
