--- a/Zhihugit/app/src/main/res/layout/activity_main.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             </android.support.v7.widget.Toolbar>
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/main_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.RecyclerView
