--- a/Zhihugit/app/src/main/res/menu/main_menu.xml
+++ b/Zhihugit/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
     <item
+
         android:id="@+id/search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom|collapseActionView"
         android:title="@string/search_menu" />
