--- a/Zhihugit/app/src/main/res/values/colors.xml
+++ b/Zhihugit/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#80BBEC</color>
     <color name="white">#fff</color>
     <color name="black">#FF080808</color>
+    <color name="search_text">#56B0E0</color>
+    <color name="line">#DADADA</color>
 </resources>
