--- a/Zhihugit/app/src/main/res/layout/activity_search.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_search.xml
@@ -14,7 +14,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="center"
-            android:src="@drawable/back_press"
+            android:src="@drawable/back_normal"
             android:background="@color/colorPrimary"
             android:layout_marginLeft="20dp"/>
         <EditText
