--- a/Zhihugit/app/src/main/res/values/styles.xml
+++ b/Zhihugit/app/src/main/res/values/styles.xml
@@ -17,5 +17,12 @@
         <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
         <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
     </style>
+    <!-->SwipeBackActivity的style<!-->
+    <!--<style name="SwipeBackLayout">-->
+        <!--<item name="edge_size">50dip</item>-->
+        <!--<item name="shadow_left">@drawable/shadow_left</item>-->
+        <!--<item name="shadow_right">@drawable/shadow_right</item>-->
+        <!--<item name="shadow_bottom">@drawable/shadow_bottom</item>-->
+    <!--</style>-->
 
 </resources>
