--- a/Zhihugit/app/src/main/res/layout/activity_message.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_message.xml
@@ -39,17 +39,47 @@
                     android:text="@string/clear_unread"
                     android:textColor="@color/white" />
             </RelativeLayout>
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/message_tab"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:layout_below="@+id/message_toolbar"
-                android:background="@color/colorPrimary"
-                app:tabGravity="fill"
-                app:tabMode="fixed">
+                android:background="?attr/colorPrimary"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/message_remind"
+                    android:layout_centerVertical="true"
+                    android:layout_width="35dp"
+                    android:layout_height="32dp"
+                    android:layout_marginLeft="19dp"
+                    android:src="@drawable/ic_menu"
+                    />
+                <ImageView
+                    android:id="@+id/message_agree"
+                    android:layout_width="30dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/agree"
+                    android:layout_marginLeft="69dp"
+                    android:layout_centerVertical="true"/>
+                <ImageView
+                    android:id="@+id/message_personal"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/message"
+                    android:layout_marginLeft="119dp"
+                    android:layout_centerVertical="true"/>
+                <LinearLayout
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/message_indicator"
+                    android:layout_width="50dp"
+                    android:layout_height="3dp"
+                    android:background="@color/gray"
+                    android:layout_marginLeft="13dp"/>
+                </LinearLayout>
+            </RelativeLayout>
 
-            </android.support.design.widget.TabLayout>
+
         </LinearLayout>
 
         <android.support.v4.view.ViewPager
