--- a/Zhihugit/app/src/main/res/values/dimens.xml
+++ b/Zhihugit/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="drawer_icon_size">24dp</dimen>
+    <dimen name="indicator_marginleft">13dp</dimen>
+    <dimen name="indicator_width">50dp</dimen>
 </resources>
