--- a/Zhihugit/app/src/main/res/layout/activity_message.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_message.xml
@@ -69,13 +69,14 @@
                 <LinearLayout
                     android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="13dp">
                 <ImageView
                     android:id="@+id/message_indicator"
                     android:layout_width="50dp"
                     android:layout_height="3dp"
                     android:background="@color/gray"
-                    android:layout_marginLeft="13dp"/>
+                    />
                 </LinearLayout>
             </RelativeLayout>
 
