--- a/Zhihugit/app/src/main/res/layout/item_noicon.xml
+++ b/Zhihugit/app/src/main/res/layout/item_noicon.xml
@@ -8,4 +8,6 @@
     android:paddingLeft="?attr/listPreferredItemPaddingLeft"
     android:paddingRight="?attr/listPreferredItemPaddingRight"
     android:textAppearance="?attr/textAppearanceListItem"
-    android:textColor="@color/black"/>
+    android:textColor="@color/black"
+    android:background="@drawable/item_pressed"
+    android:clickable="true"/>
