--- a/Zhihugit/app/src/main/res/layout/activity_search.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_search.xml
@@ -15,7 +15,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:src="@drawable/back_normal"
-            android:background="@color/colorPrimary"
+            android:background="?attr/colorPrimary"
             android:layout_marginLeft="20dp"/>
         <EditText
             android:layout_weight="1"
