--- a/Zhihugit/app/src/main/res/layout/activity_message.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_message.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/message_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary">
+                android:background="?attr/colorPrimary">
 
                 <TextView
                     android:layout_width="wrap_content"
