--- a/Zhihugit/app/src/main/res/layout/activity_personalinformation.xml
+++ b/Zhihugit/app/src/main/res/layout/activity_personalinformation.xml
@@ -23,7 +23,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="?attr/colorPrimary"
         android:orientation="vertical"
         >
         <android.support.design.widget.TabLayout
@@ -34,7 +34,8 @@
             android:layout_marginLeft="15dp"
             app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/gray"
-            app:tabTextColor="@color/white" >
+            app:tabTextColor="@color/white"
+            android:fillViewport="false">
 
         </android.support.design.widget.TabLayout>
     </LinearLayout>
